--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,9 @@
+# Git LFS Configuration for Large Files
+
+# Track large PDF files with Git LFS
 *.pdf filter=lfs diff=lfs merge=lfs -text
+# Track large video files with Git LFS
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+# Track large image files (optional - only if needed)
+# PHOTOS/**/*.png filter=lfs diff=lfs merge=lfs -text
+# PHOTOS/**/*.jpg filter=lfs diff=lfs merge=lfs -text
