Fix PDF iframe blocking - Change X-Frame-Options from DENY to SAMEORIGIN

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,7 +28,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "DENY"
+    X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     # Enable Brotli compression (Netlify handles this automatically)
